; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/sgi-gru/extr_grufault.c_gru_flush_cache_cbe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/sgi-gru/extr_grufault.c_gru_flush_cache_cbe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gru_control_block_extended = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gru_control_block_extended*)* @gru_flush_cache_cbe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gru_flush_cache_cbe(%struct.gru_control_block_extended* %0) #0 {
  %2 = alloca %struct.gru_control_block_extended*, align 8
  store %struct.gru_control_block_extended* %0, %struct.gru_control_block_extended** %2, align 8
  %3 = load %struct.gru_control_block_extended*, %struct.gru_control_block_extended** %2, align 8
  %4 = call i64 @unlikely(%struct.gru_control_block_extended* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.gru_control_block_extended*, %struct.gru_control_block_extended** %2, align 8
  %8 = getelementptr inbounds %struct.gru_control_block_extended, %struct.gru_control_block_extended* %7, i32 0, i32 0
  store i64 0, i64* %8, align 8
  %9 = load %struct.gru_control_block_extended*, %struct.gru_control_block_extended** %2, align 8
  %10 = call i32 @gru_flush_cache(%struct.gru_control_block_extended* %9)
  br label %11

11:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @unlikely(%struct.gru_control_block_extended*) #1

declare dso_local i32 @gru_flush_cache(%struct.gru_control_block_extended*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
